// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SampleSearchToolbar /> > should render when [canCreate=%p] false 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
</Toolbar>
`;

exports[`<SampleSearchToolbar /> > should render when [canCreate=%p] true 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
  <LinkButton
    color="blue"
    tip="Create"
    to="/samples/create"
  >
    <Icon
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;
